<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Senaste träning"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:background="#696969"
	/>
    <TextView
        android:id="@+id/tvId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/databaseId"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingBottom="20dp"
	/>
    
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/databaseDate"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingBottom="20dp"
	/>
    
    <TextView
        android:id="@+id/tvTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/databaseTime"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingBottom="20dp"
	/>
    
    <TextView
        android:id="@+id/tvName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/databaseName"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingBottom="20dp"
	/>
    
    <TextView
        android:id="@+id/tvEname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/databaseEname"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingBottom="20dp"
	/>
    

</LinearLayout>